# exonum-cryptocurrency-multisig

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: api.rs  lib.rs  main.rs  schema.rs  transactions.rs  transferproposal.rs  wallet.rs
backend/src/proto/: cryptocurrency.proto  mod.rs
backend/tests/: api.rs
docker/: Dockerfile-backend  Dockerfile-frontend  docker-entrypoint-backend.sh
frontend/: package-lock.json  package.json
frontend/src/pages/: Auth.vue  Wallet.vue
frontend/src/plugins/: blockchain.js
frontend/src/store/: index.js
frontend/tests/: blockchain.test.js
frontend/tests/data/: actual.json  proof.json
