[package]
name = "exonum-cryptocurrency-multisig"
version = "0.10.3"
edition = "2018"
authors = ["Ruslan Salikhov <ruslan.salihov@gmail.com"]
homepage = "https://github.com/ruslansalikhov/exonum-cryptocurrency-multisig"
repository = "https://github.com/ruslansalikhov/exonum-cryptocurrency-multisig"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "example"]
categories = ["rust-patterns", "development-tools::testing"]
description = "Exonum blockchain example implementing a cryptocurrency."

[badges]
travis-ci = { repository = "exonum/exonum" }
circle-ci = { repository = "exonum/exonum" }

[dependencies]
exonum = { version = "0.10.3" }
exonum-derive = { version = "0.10.0" }
exonum-configuration = { version = "0.10.1" }
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.5"
protobuf = "2.2.0"

[dev-dependencies]
exonum-testkit = { version = "0.10.2" }
serde_json = "1.0.0"
pretty_assertions = "0.5.1"
assert_matches = "1.2.0"
hex = "0.3.2"

[build-dependencies]
exonum-build = { version = "0.10.0" }

[features]
default = ["with-serde"]
with-serde = []
